# whisper-dictation

./: README.md  pyproject.toml  run.sh  whisper-dictation.py
